# greed

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  greed.sample.toml  greed.toml.sample
src/: config.rs  main.rs  notifiers.rs
